--- a/netspellweb/netspellweb.csproj
+++ b/netspellweb/netspellweb.csproj
@@ -89,6 +89,9 @@
     <Content Include="scripts\bootstrap.min.js" />
     <Content Include="scripts\jquery-1.9.1.js" />
     <Content Include="scripts\jquery-1.9.1.min.js" />
+    <Content Include="scripts\knockout-3.4.0.debug.js" />
+    <Content Include="scripts\knockout-3.4.0.js" />
+    <Content Include="scripts\SpellCheckCtrl3View.js" />
     <Content Include="scripts\spellchecker.js" />
     <Content Include="Web.config" />
   </ItemGroup>
