--- a/netspellweb/packages.config
+++ b/netspellweb/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="bootstrap" version="3.3.5" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
+  <package id="knockoutjs" version="3.4.0" targetFramework="net45" />
   <package id="NHunspell" version="1.2.5538.16545" targetFramework="net45" />
 </packages>
